--- a/BlockchainETN/ClientApp/package.json
+++ b/BlockchainETN/ClientApp/package.json
@@ -24,9 +24,11 @@
     "@angular/platform-server": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
+    "@swimlane/ngx-datatable": "14.0.0",
     "aspnet-prerendering": "^3.0.1",
     "jquery": "^1.9.1",
     "popper.js": "^1.14.7",
+    "ngx-loading": "^2.0.1",
     "bootstrap": "^4",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
