--- a/BlockchainETN/BlockchainETN.csproj
+++ b/BlockchainETN/BlockchainETN.csproj
@@ -26,7 +26,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\InfoShare.service.ts" />
     <None Remove="ClientApp\src\app\planning-dashboard\company.json" />
+    <None Remove="ClientApp\src\shared-library.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\infoshare.service.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\shared-library.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
