--- a/BlockchainETN/ClientApp/package.json
+++ b/BlockchainETN/ClientApp/package.json
@@ -32,7 +32,8 @@
     "bootstrap": "^4",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.19",
+    "ngx-mask": "2.9.6"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.0",
