--- a/BlockchainETN/ClientApp/package.json
+++ b/BlockchainETN/ClientApp/package.json
@@ -33,7 +33,8 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19",
-    "ngx-mask": "2.9.6"
+    "ngx-mask": "2.9.6",
+    "ajv": "^6.0.0"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.0",
