--- a/BlockchainETN/ClientApp/package.json
+++ b/BlockchainETN/ClientApp/package.json
@@ -26,7 +26,7 @@
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "@swimlane/ngx-datatable": "11.3.2",
     "aspnet-prerendering": "^3.0.1",
-    "jquery": "^1.9.1",
+    "jquery": "3.4.1",
     "popper.js": "^1.14.7",
     "ngx-loading": "^2.0.1",
     "bootstrap": "^4",
