before modifying Smart Contract. Implemented logic for planning and manufacturing dashboards

--- a/BlockchainETN/ClientApp/package.json
+++ b/BlockchainETN/ClientApp/package.json
@@ -23,18 +23,21 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/platform-server": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "@swimlane/ngx-datatable": "11.3.2",
+    "ajv": "^6.0.0",
     "aspnet-prerendering": "^3.0.1",
-    "jquery": "^1.9.1",
-    "popper.js": "^1.14.7",
-    "ngx-loading": "^2.0.1",
     "bootstrap": "^4",
     "core-js": "^2.4.1",
-    "rxjs": "^5.0.0",
-    "zone.js": "^0.8.19",
+    "ethereum-input-data-decoder": "^0.2.0",
+    "jquery": "^1.9.1",
+    "ngx-loading": "^2.0.1",
     "ngx-mask": "2.9.6",
-    "ajv": "^6.0.0"
+    "popper.js": "^1.14.7",
+    "rxjs": "^5.0.0",
+    "truffle-contract": "^4.0.18",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.0",
