--- a/BlockchainETN/ClientApp/package.json
+++ b/BlockchainETN/ClientApp/package.json
@@ -32,8 +32,10 @@
     "core-js": "^2.4.1",
     "ethereum-input-data-decoder": "^0.2.0",
     "jquery": "^1.9.1",
+    "ngtoast": "^2.0.1",
     "ngx-loading": "^2.0.1",
     "ngx-mask": "2.9.6",
+    "ngx-toastr": "^8.4.0",
     "popper.js": "^1.14.7",
     "rxjs": "^5.0.0",
     "truffle-contract": "^4.0.18",
@@ -47,6 +49,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "ganache-cli": "^6.4.3",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
